Fixing with the iron-collapse part. Fixing drawer menu. Reorganized a bit how colors are set. Now Preloading images. Added content for Kayak and MTB. Added alt text to images. my-fancy-list now have the "separated" attribute that let text not wrap the image.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,11 +12,6 @@ body {
   color: #757575;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 iframe {
     display: block;
     width: 100%;
@@ -28,15 +23,4 @@ audio, canvas, iframe, img, svg, video {
 
 .left-menu {
   max-width: 300px;
-}
-
-.top-layer-link {
-  padding-left: 0;
-}
-
-.link{
-  text-decoration: inherit;
-  color: inherit;
-  height: 100%;
-
 }
